force-app/main/default/objects/Pokemon_Settings__mdt/Pokemon_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Pokemon Settings</label>
    <pluralLabel>Pokemon Settings</pluralLabel>
</CustomObject>