force-app/main/default/objects/Pokemon_Settings__mdt/fields/Automation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Automation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automation Enabled</label>
    <type>Checkbox</type>
</CustomField>