force-app/main/default/objects/Pokemon_Settings__mdt/fields/Catch_Level_Min__c.field-meta.xml
<CustomField>
    <fullName>Catch_Level_Min__c</fullName>
    <label>Catch Level Min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>