force-app/main/default/objects/Pokemon_Settings__mdt/fields/Catch_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Catch_Rate_Multiplier__c</fullName>
    <description>Multiplies the computed catch probability (capped at 100%). 1 = the base formula; 1.5 = friendly pilot odds. Tune here without a deploy.</description>
    <label>Catch Rate Multiplier</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>