force-app/main/default/objects/Pokemon_Settings__mdt/fields/Common_Level_Offset_Min__c.field-meta.xml
<CustomField>
    <fullName>Common_Level_Offset_Min__c</fullName>
    <label>Common Level Offset Min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>