force-app/main/default/objects/Pokemon_Settings__mdt/fields/Critical_Capture_Rate__c.field-meta.xml
<CustomField>
    <fullName>Critical_Capture_Rate__c</fullName>
    <label>Critical Capture Rate</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>