force-app/main/default/objects/Pokemon_Settings__mdt/fields/Daily_Total_Currency_Cap__c.field-meta.xml
<CustomField>
    <fullName>Daily_Total_Currency_Cap__c</fullName>
    <label>Daily Total Currency Cap</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>