force-app/main/default/objects/Pokemon_Settings__mdt/fields/Flee_Chance_Rare__c.field-meta.xml
<CustomField>
    <fullName>Flee_Chance_Rare__c</fullName>
    <label>Flee Chance Rare</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>