force-app/main/default/objects/Pokemon_Settings__mdt/fields/Flee_Chance_Uncommon__c.field-meta.xml
<CustomField>
    <fullName>Flee_Chance_Uncommon__c</fullName>
    <label>Flee Chance Uncommon</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>