force-app/main/default/objects/Pokemon_Settings__mdt/fields/Great_Ball_Price__c.field-meta.xml
<CustomField>
    <fullName>Great_Ball_Price__c</fullName>
    <label>Great Ball Price</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>