force-app/main/default/objects/Pokemon_Settings__mdt/fields/Master_Ball_Dex_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Master_Ball_Dex_Milestone__c</fullName>
    <label>Master Ball Dex Milestone</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>