force-app/main/default/objects/Pokemon_Settings__mdt/fields/Poke_Ball_Price__c.field-meta.xml
<CustomField>
    <fullName>Poke_Ball_Price__c</fullName>
    <label>Poke Ball Price</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>