force-app/main/default/objects/Pokemon_Settings__mdt/fields/Shiny_Rate__c.field-meta.xml
<CustomField>
    <fullName>Shiny_Rate__c</fullName>
    <label>Shiny Rate</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>