force-app/main/default/objects/Pokemon_Settings__mdt/fields/Stone_Price__c.field-meta.xml
<CustomField>
    <fullName>Stone_Price__c</fullName>
    <label>Stone Price</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>